@@ -1,55 +1,0 @@
-<?xml version="1.0" encoding="UTF-8"?>
-
-<form>
-  <title></title>
-  <name>tab_metadata_extra_form</name>
-  <action></action>
-  <enctype></enctype>
-  <method>POST</method>
-
-  <i18n_domain>silva_news</i18n_domain>
-  <i18n>tab_metadata_extra_form</i18n>
-
-  <groups multiple="true">
-    <group>
-      <title>Default</title>
-      <fields multiple="true">
-
-      <field><id>acquire_addables</id> <type>CheckBoxField</type>
-        <values>
-          <alternate_name></alternate_name>
-          <hidden type="int">0</hidden>
-          <css_class></css_class>
-          <default type="int">1</default>
-          <title>Acquire</title>
-          <extra></extra>
-          <description>If checked, inherit the allowed addables from above.</description>
-          <external_validator></external_validator>
-        </values>
-        <tales>
-          <default>python:form.get_acquire_addables_checked()</default>
-        </tales>
-      </field>
-      <field><id>addables</id> <type>MultiCheckBoxField</type>
-        <values>
-          <alternate_name></alternate_name>
-          <required type="int">0</required>
-          <hidden type="int">0</hidden>
-          <items>[]</items>
-          <default>[]</default>
-          <title>Addables</title>
-          <extra>tal:attributes="id item"</extra>
-          <description>If 'acquire' is not checked, these settings will determine the items allowed in this publication. Otherwise the addables are acquired from the publication above.</description>
-          <external_validator></external_validator>
-          <css_class></css_class>
-          <orientation>vertical</orientation>
-        </values>
-        <tales>
-          <items>python:form.get_all_addables()</items>
-          <default>python:form.get_addables_allowed()</default>
-        </tales>
-      </field>
-      </fields>
-    </group>
-  </groups>
-</form>
