@@ -33,7 +33,7 @@
      tal:define="classname python: 'newsitem-thumbnail-%s'%(repeat['r'].odd() and 'odd' or 'even')"
      tal:replace="structure python: obj.get_thumbnail(classname)"
     />
-   <tal:insertintro replace="structure r/get_intro" />
+   <tal:insertintro replace="structure obj/get_intro" />
   </div>
 
   <p class="p articlelink">
